# rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependabot-approve.yml  dependabot.yml  docker-publish.yml  publish_docker.yml  rust-build-release-binaries.yml  rust-publish.yml  rust-release.yml  rust-stability.yml  rust.yml
ninja-build/: Cargo.toml
ninja-build/src/: lib.rs  nightly.rs
ninja-build_rs/: Cargo.toml  LICENSE  README.md  about.toml
ninja-build_rs/examples/assert_matches/: Cargo.toml  build.rs  test.sh
ninja-build_rs/examples/assert_matches/src/: lib.rs
ninja-build_rs/src/: lib.rs  nightly.rs
ninja-xtask/: CHANGELOG.md  Cargo.toml  README.md  about.hbs  about.toml  build.rs
ninja-xtask/src/: commands.rs  lib.rs  main.rs
ninja-xtask/tests/: test_commands.rs
ninja-xtask/tests/fixture/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: test_fmt.rs
