[package]
name = "ninja-build"
version = "0.0.1"
edition = "2024"
readme = "README.md"
description = "build script helpers for working with nightly"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["build", "autocfg", "nightly"]
homepage = "https://github.com/MusicalNinjaDad/rust"
repository = "https://github.com/MusicalNinjaDad/rust"
categories = ["development-tools::build-utils"]
license = "MIT"
publish = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }_v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"

[dependencies]
autocfg = "1.5.0"
