[package]
name = "ninja-build_rs"
version = "0.3.0"
edition = "2024"
readme = "README.md"
description = "build script helpers for working with nightly"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["build", "autocfg", "nightly"]
homepage = "https://github.com/MusicalNinjaDad/rust"
repository = "https://github.com/MusicalNinjaDad/rust"
categories = ["development-tools::build-utils"]
license = "MIT"

[dependencies]
autocfg = "1.5.1"

derive_more.version = "2.1.1"
derive_more.features = ["display"]

[dev-dependencies]
tempfile = "3.27.0"
