[package]
name = "ninja-build_rs"
version = "0.4.1"
edition = "2024"
readme = "README.md"
description = "build script helpers for working with nightly"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["build", "autocfg", "nightly"]
homepage = "https://github.com/MusicalNinjaDad/rust"
repository = "https://github.com/MusicalNinjaDad/rust"
categories = ["development-tools::build-utils"]
license = "MIT"
rust-version = "1.85.1"

[dependencies]
autocfg = "1.5.1"
derive_more.version = "2.1.1"
derive_more.features = ["display"]
indexmap = "2.14.0"

[dev-dependencies]
tempfile = "3.27.0"
